--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ body {
   color: #eee;
 }
 
+.div{
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
 .site {
   text-align: center;
   padding: 2.5rem;
@@ -42,7 +47,7 @@ label {
 
 .input {
   padding: 0.6rem;
-  border: 2px solid #555;
+  border: 1px solid #555;
   background-color: #222;
   border-radius: 10px;
   outline: none;
@@ -91,10 +96,19 @@ button i {
   margin-left: 0.6rem;
 }
 
-.circle{
-  border-radius: 50%;
-  color: #fff;
+.display_output{
+  background: linear-gradient(145deg, #1f1f1f, #292929);
+  border: 1px solid transparent;
+  box-shadow: 8px 8px 15px rgba(0, 0, 0, 0.3), -8px -8px 15px rgba(255, 255, 255, 0.05);
+  min-width: 400px;
+  padding: 20px;
+  border-radius: 10px;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
 }
+
+
 
 @media (max-width: 768px) {
   .site {
@@ -113,5 +127,20 @@ button i {
   .circle{
     border-radius: 50%;
     color: #fff;
+  }
+}
+.blow-effect {
+  animation: blow 0.3s ease forwards;
+}
+
+@keyframes blow {
+  0% {
+      transform: scale(1);
+  }
+  50% {
+      transform: scale(1.5); 
+  }
+  100% {
+      transform: scale(1); 
   }
 }
