--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@ body {
 .heading h1 {
   font-size: 2.2rem;
   margin-bottom: 1.5rem;
-  color: #0ff;
-  text-shadow: 0 0 15px #0ff, 0 0 30px #0ff;
+  color: rgb(0, 255, 255);
+  text-shadow: 0 0 15px  rgb(0, 255, 255), 0 0 30px  rgb(0, 255, 255);
   letter-spacing: 3px;
 }
 
@@ -54,7 +54,7 @@ label {
   width: 80px;
   text-align: center;
   font-size: 1rem;
-  color: #0ff;
+  color:  rgb(0, 255, 255);
 }
 
 button {
