--- a/style.css
+++ b/style.css
@@ -109,6 +109,14 @@ button i {
 }
 
 
+.circle_row{
+  width: 20px;
+  height: 20px;
+  border: 2px solid white;
+  border-radius: 50%;
+  margin: 5px;  
+}
+
 
 @media (max-width: 768px) {
   .site {
