--- a/style.css
+++ b/style.css
@@ -108,13 +108,13 @@ button i {
   flex-direction: column;
 }
 
-
+mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm
 .circle_row{
   width: 20px;
   height: 20px;
   border: 2px solid white;
   border-radius: 50%;
-  margin: 5px;  
+  margin: 5px;
 }
 
 
