--- a/style.css
+++ b/style.css
@@ -139,6 +139,19 @@ button {
   animation: blow 0.3s ease forwards;
 }
 
+.rowDiv{
+  display: flex;
+  justify-content: center;
+}
+
+.circle{
+    width: 20px;
+    height: 20px;
+    border: 2px solid white;
+    border-radius: 50%;
+    margin: 5px;
+}
+
 @keyframes blow {
   0% {
       transform: scale(1);
